# mbedtls-csrp

./: CMakeLists.txt  test_srp.c  test_srp_hap.c
android-build/: build.sh
